<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorYellow"
    android:padding="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/logo" />

    <TextView
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:fontFamily="casual"
android:text="@string/app_title"
android:textAlignment="center"
android:textAllCaps="true"
android:textColor="@color/colorPrimary"
android:textStyle="bold"
android:textSize="30dp"
android:gravity="center_horizontal" />

<EditText
android:id="@+id/userName"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:textSize="15dp"
    android:inputType="text"
    android:autofillHints="@string/login_username"
android:hint="@string/login_username" />

<EditText
android:id="@+id/password"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:textSize="15dp"
android:inputType="textPassword"
android:hint="@string/login_password" />

<CheckBox
    android:id="@+id/remember_me"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:textSize="15dp"
android:text="@string/login_checkbox" />

<Space
android:layout_width="match_parent"
android:layout_height="15dp" />

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:padding="10dp"
android:weightSum="2">

<Button
    android:id="@+id/loginBtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@color/colorLightPink"
    android:text="@string/login_login_btn"
    android:textSize="18dp"
    android:layout_marginRight="5dp"
    android:padding="3dp"/>

<Button
    android:id="@+id/registerBtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@color/colorWhite"
    android:text="@string/login_register_btn"
    android:textSize="18dp"
    android:padding="3dp"/>
</LinearLayout>
    </LinearLayout>