<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorYellow"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:fontFamily="casual"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="30dp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/setName"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:textSize="15dp"
        android:hint="@string/login_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/setEmail"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:textSize="15dp"
        android:hint="@string/set_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/setPassword"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:textSize="15dp"
        android:inputType="textPassword"
        android:hint="@string/login_password" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

        <Button
            android:id="@+id/registerBtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/login_register_btn"
            android:textSize="18dp" />

</LinearLayout>